--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+/* color grid for the whole webpage */
+
+:root {
+  --color-1: rgb(0,50,23);
+  --color-2: orange;
+  --color-3: rgb(0,50,0);
+  --welcome-title: rgb(250,130,0);
+  --font-color: orangered;
+  --card-title-color: lightgreen;
+  --background-color: rgb(255,100,0,0.2);
+}
+
+/* Normalizing by removing any default margin or padding */
 html, body {
   margin: 0;
   padding: 0;
@@ -18,6 +31,7 @@ html, body {
   background: rgb(0,50,40);
   z-index: 1;
   font-family: 'Roboto Condensed';
+  border-bottom: 5px solid var(--font-color);
 }
 
 #nav-items {
@@ -26,36 +40,44 @@ html, body {
 }
 
 
+/*  */
+
+/* Properties that apply to both nav items and social icons */
 ul {
   list-style: none;
-  margin-right:20px;
-}
-
-.nav-item {
-  padding: 10px;
-  font-size: 1.5em;
-  color: orangered
-}
-
-.nav-item:hover {
-  color: orange;
 }
 
 a {
   text-decoration: none;
 }
 
-#welcome-section {
-  
-  height: 100vh;
-  text-align: center;
-  padding-top: 150px;
-  background: linear-gradient(rgb(0,50,23), rgb(0,50,0)50%,orange);
-  font-family: 'Bebas Neue';
-  font-size: 6em;
-  color: rgb(250,130,0)
+/*  */
+
+
+
+.nav-item {
+  padding: 10px; /*  comes handy on small screens  */
+  font-size: 1.5em;
+  color: var(--font-color);
 }
 
+.nav-item:hover {
+  color: var(--color-2);
+}
+
+
+#welcome-section {
+  height: 100vh;
+  text-align: center;
+  background: linear-gradient(var(--color-2)0%,var(--color-1)20%,var(--color-3)50%,var(--color-1)85%,var(--color-2)100%);
+  font-family: 'Bebas Neue';
+  font-size: 400%;
+  color: var(--welcome-title);
+  overflow: hidden;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
 
 #portfolio h1 {
   margin-top: 40px;
@@ -65,7 +87,7 @@ a {
 
 hr {
   width: 40%;
-  border: 2px solid orange;
+  border: 2px solid var(--color-2);
   margin: 10px auto 20px;
 }
 
@@ -89,7 +111,6 @@ hr {
 .img-container {
   width:100%;
   height:90%;
-  object-fit: cover;
   margin: 0;
   padding: 0;
 }
@@ -103,28 +124,28 @@ img {
 
 .project-title {
   width: 100%;
-  background-color: lightgreen;
+  background-color: var(--card-title-color);
   position: absolute;
   bottom: 0;
   text-align: center;
-  height:calc(0.1 * 400px);
-  margin: 0;
+  height: 10%;
+/*   margin: 0; */
   padding-top: 10px;
 }
 
 button {
   display: block;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 30px;
   padding: 20px;
-  background-color: rgb(0,90,0);
+  background-color: var(--color-1);
   color: white;
-  border-radius: 0px;
-  width: 15%;
+  font-weight: bold;
+  width: 30%;
 }
 
 button:hover {
-  color:orangered;
+  color:var(--font-color);
   cursor: pointer;
 }
 
@@ -138,35 +159,46 @@ button:hover {
   display: flex;
   justify-content: space-evenly;
   padding-bottom: 50px;
+  
 }
 
 .icon {
   font-size: xxx-large;
-  color: orangered;
+  color: var(--font-color);
+  margin-right:20px;
 }
 
 .icon:hover {
-  color: rgb(0,50,23);
+  color: var(--color-1);
 }
 
 main {
-  background-color: rgb(255,100,0,0.2)
+  background-color: var(--background-color); 
 }
 
-@media (min-width: 650px) {
+/* Responsive website */
+
+@media (min-width: 850px) {
   .project:hover {
   scale: 1.1;
   margin: 0 20px;
-  transition: all 0.5s ease-out;
+  transition: all 0.5s ease-in-out;
   }
   
+  #portfolio hr{
+    margin-bottom:50px;
+  }
+  
+  .project {
+    width:35%;
+  }
   
 }
 
-@media (max-width: 650px) {
+@media (max-width: 850px) {
   
 button {
-    width: 100px;
+    width: 200px;
   }
   
   #flex {
@@ -175,14 +207,26 @@ button {
   }
   
   .project {
-    width:60%;
+    width:50%;
   }
   
 }
 
-@media (min-width: 800px) {
+@media (max-width:550px) {
   .project {
-    width:35%;
+    width: 70%;
+  }
+  
+  #icons-list {
+    padding: 10px 0;;
+  }
+  
+  #portfolio h1 {
+    padding: auto 50px;
+  }
+  
+  #welcome-section {
+    font-size: 300%
   }
 }
 
